Fix: Margin on mobile

--- a/documenation/documentation.css
+++ b/documenation/documentation.css
@@ -53,7 +53,7 @@
   .doc-container {
     display: flex;
     justify-content: center;
-    margin: 6rem 2rem 2rem;
+    margin: 6rem 0rem 1rem;
     position: relative;
   }
 }
